adobe API: move to java 8